# libpascalreal

./: CMakeLists.txt  LICENCE.BSD  README.md  libpascalreal.c  libpascalreal.h  test.c
.github/: lnx_build_and_test.sh  win_build_and_test.bat
.github/workflows/: lnx_build_and_test.yml  win_build_and_test.yml
